--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      display: flex;
-      min-height: 100vh;
       background-color: #f9f9f9;
-      flex-direction: column;
     }
 
     .banner-img {
@@ -22,7 +19,8 @@
 
     .content {
       display: flex;
-      flex-grow: 1;
+      flex-direction: row;
+      min-height: 100vh;
     }
 
     .sidebar {
@@ -31,6 +29,10 @@
       width: 440px;
       box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
       text-align: center;
+      position: sticky;
+      top: 0;
+      align-self: flex-start;
+      height: fit-content;
     }
 
     .profile-pic {
@@ -187,8 +189,6 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
 
       <div class="column">
         <h3>Research Highlights</h3>
@@ -196,9 +196,9 @@
           <div class="publication-item">
             <div>
               <p><strong>Abstract:</strong> Many erroneous literal translations, often produced by low-proficiency bilinguals, can be attributed to a tendency to favor typical translation equivalents; however, the underlying neural mechanism remains poorly understood. This study investigated this typicality effect in real-time translation with the event-related brain potential (ERP) technique. Mandarin Chinese–English bilinguals were presented with a Chinese verb phrase (e.g., <em>kāi chuānghù</em> “open the window” or <em>kāi diànnăo</em> “turn on the computer”) followed by an English verb (e.g., <em>open</em> (a typical translation) or <em>turn on</em> (an atypical translation)) and judged whether the English verb was an appropriate/congruent translation of the verb in the Chinese verb phrase previously presented (e.g., <em>kāi</em>). Compared to typical translation equivalents, atypical equivalents elicited an N400, indicating retrieval difficulty, and an f-PNP in congruent trials, reflecting the effort to inhibit typical translations and integrate atypical ones. This pattern may arise from differences in resting-level activation between typical and atypical equivalents.</p>
-              
+
               <p>To read the full article, please click 
-                <a href="https://doi.org/10.1017/S1366728925000227" target="_blank">here</a>.
+                <a href="https://doi.org/10.1017/S1366728925000227" target="_blank">here</a>
               </p>
 
               <p>Below is a scalp map video showing the Atypical minus Typical translation equivalents difference in congruent trials (e.g., <em>kāi diànnăo</em> “turn on the computer” followed by <em>turn on</em> minus <em>kāi chuānghù</em> “open the window” followed by <em>open</em>). Compared to Typical translation equivalents, we can see that atypical translation equivalents elicit a posterior N400 (from 300 to 500 ms) followed by a frontal-Post N400 Positivity (f-PNP) (from 600 to 900 ms). All the data is available on 
@@ -214,9 +214,9 @@
           </div>
         </div>
       </div>
+
     </div>
   </div>
-  
+
 </body>
 </html>
-
