--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <title>Jean-François Petit de Chemellier (薛法藍)</title>
   <style>
-    /* Reset default margins and paddings */
     * {
       margin: 0;
       padding: 0;
@@ -130,7 +129,6 @@
       line-height: 1.6;
     }
 
-    /* Responsive adjustments */
     @media (max-width: 768px) {
       .sidebar {
         position: relative;
@@ -207,13 +205,14 @@
       <div class="publications">
         <div class="publication-item">
           <div>
-            <p><strong>Abstract:</strong> Many erroneous literal translations, often produced by low-proficiency bilinguals, can be attributed to a tendency to favor typical translation equivalents; however, the underlying neural mechanism remains poorly understood. This study investigated this typicality effect in real-time translation with the event-related brain potential (ERP) technique. Mandarin Chinese–English bilinguals were presented with a Chinese verb phrase (e.g., <em>kāi chuānghù</em> “open the window” or <em>kāi diànnăo</em> “turn on the computer”) followed by an English verb (e.g., <em>open</em> (a typical translation) or <em>turn on</em> (an atypical translation)) and judged whether the English verb was an appropriate/congruent translation of the verb in the Chinese verb phrase previously presented (e.g., <em>kāi</em>). Compared to typical translation equivalents, atypical equivalents elicited an N400, indicating retrieval difficulty, and an f-PNP in congruent trials, reflecting the effort to inhibit typical translations and integrate atypical ones. This pattern may arise from differences in resting-level activation between typical and atypical equivalents.</p>
-
-            <p>To read the full article, please click 
-              <a href="https://doi.org/10.1017/S1366728925000227" target="_blank">here</a>
+            <p><strong>
+              Abstract from <em>‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing</em>:
+            </strong></p>
+            <p>
+              Many erroneous literal translations, often produced by low-proficiency bilinguals, can be attributed to a tendency to favor typical translation equivalents; however, the underlying neural mechanism remains poorly understood. This study investigated this typicality effect in real-time translation with the event-related brain potential (ERP) technique. Mandarin Chinese–English bilinguals were presented with a Chinese verb phrase (e.g., <em>kāi chuānghù</em> “open the window” or <em>kāi diànnăo</em> “turn on the computer”) followed by an English verb (e.g., <em>open</em> (a typical translation) or <em>turn on</em> (an atypical translation)) and judged whether the English verb was an appropriate/congruent translation of the verb in the Chinese verb phrase previously presented (e.g., <em>kāi</em>). Compared to typical translation equivalents, atypical equivalents elicited an N400, indicating retrieval difficulty, and an f-PNP in congruent trials, reflecting the effort to inhibit typical translations and integrate atypical ones. This pattern may arise from differences in resting-level activation between typical and atypical equivalents.
             </p>
-
-            <p>Below is a scalp map video showing the Atypical minus Typical translation equivalents difference in congruent trials (e.g., <em>kāi diànnăo</em> “turn on the computer” followed by <em>turn on</em> minus <em>kāi chuānghù</em> “open the window” followed by <em>open</em>). Compared to Typical translation equivalents, we can see that atypical translation equivalents elicit a posterior N400 (from 300 to 500 ms) followed by a frontal-Post N400 Positivity (f-PNP) (from 600 to 900 ms). All the data is available on 
+            <p>
+              Below is a scalp map video showing the Atypical minus Typical translation equivalents difference in congruent trials (e.g., <em>kāi diànnăo</em> “turn on the computer” followed by <em>turn on</em> minus <em>kāi chuānghù</em> “open the window” followed by <em>open</em>). Compared to Typical translation equivalents, we can see that atypical translation equivalents elicit a posterior N400 (from 300 to 500 ms) followed by a frontal-Post N400 Positivity (f-PNP) (from 600 to 900 ms). All the data is available on 
               <a href="https://doi.org/10.6084/m9.figshare.28014482" target="_blank">Figshare</a>.
             </p>
 
@@ -229,6 +228,5 @@
 
   </div>
 
-</
-::contentReference[oaicite:9]{index=9}
- 
+</body>
+</html>
