--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             </p>
             <p>
               Below is a scalp map video showing the Atypical minus Typical translation equivalents difference in congruent trials (e.g., <em>kāi diànnăo</em> “turn on the computer” followed by <em>turn on</em> minus <em>kāi chuānghù</em> “open the window” followed by <em>open</em>). Compared to Typical translation equivalents, we can see that atypical translation equivalents elicit a posterior N400 (from 300 to 500 ms) followed by a frontal-Post N400 Positivity (f-PNP) (from 600 to 900 ms). All the data is available on 
-              <a href="https://doi.org/10.6084/m9.figshare.28014482" target="_blank">Figshare</a>.
+              <a href="https://doi.org/10.6084/m9.figshare.28014482" target="_blank">Figshare.</a>
             </p>
 
             <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; margin-top: 10px;">
