--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
       <div class="publications">
         <div class="publication-item">
           <div>
-            <p><strong>
-              Abstract from <em>‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing</em>:
-            </strong></p>
+            <p>
+              From <strong><em>‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing</em></strong>:
+            </p>
             <p>
               Many erroneous literal translations, often produced by low-proficiency bilinguals, can be attributed to a tendency to favor typical translation equivalents; however, the underlying neural mechanism remains poorly understood. This study investigated this typicality effect in real-time translation with the event-related brain potential (ERP) technique. Mandarin Chinese–English bilinguals were presented with a Chinese verb phrase (e.g., <em>kāi chuānghù</em> “open the window” or <em>kāi diànnăo</em> “turn on the computer”) followed by an English verb (e.g., <em>open</em> (a typical translation) or <em>turn on</em> (an atypical translation)) and judged whether the English verb was an appropriate/congruent translation of the verb in the Chinese verb phrase previously presented (e.g., <em>kāi</em>). Compared to typical translation equivalents, atypical equivalents elicited an N400, indicating retrieval difficulty, and an f-PNP in congruent trials, reflecting the effort to inhibit typical translations and integrate atypical ones. This pattern may arise from differences in resting-level activation between typical and atypical equivalents.
             </p>
