--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <div class="publication-item">
       <div>
         <p>
-          Abstract from <a href="https://doi.org/10.1017/S1366728925000227" target="_blank">‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing</a>:
+          Abstract from <a href="https://doi.org/10.1017/S1366728925000227" target="_blank">‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing</a>
         </p>
         <p>
           Many erroneous literal translations, often produced by low-proficiency bilinguals, can be attributed to a tendency to favor typical translation equivalents; however, the underlying neural mechanism remains poorly understood. This study investigated this typicality effect in real-time translation with the event-related brain potential (ERP) technique. Mandarin Chinese–English bilinguals were presented with a Chinese verb phrase (e.g., <em>kāi chuānghù</em> “open the window” or <em>kāi diànnăo</em> “turn on the computer”) followed by an English verb (e.g., <em>open</em> (a typical translation) or <em>turn on</em> (an atypical translation)) and judged whether the English verb was an appropriate/congruent translation of the verb in the Chinese verb phrase previously presented (e.g., <em>kāi</em>). Compared to typical translation equivalents, atypical equivalents elicited an N400, indicating retrieval difficulty, and an f-PNP in congruent trials, reflecting the effort to inhibit typical translations and integrate atypical ones. This pattern may arise from differences in resting-level activation between typical and atypical equivalents.
