--- a/index.html
+++ b/index.html
@@ -67,11 +67,16 @@
       margin-bottom: 10px;
     }
 
+    /* Links: inline by default */
     a {
-      display: block;
-      margin-bottom: 8px;
       text-decoration: none;
       color: #007acc;
+    }
+
+    /* Sidebar links stacked vertically */
+    .sidebar a {
+      display: block;
+      margin-bottom: 8px;
     }
 
     .orcid-link {
@@ -235,4 +240,3 @@
 
 </body>
 </html>
-
