--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       font-family: Arial, sans-serif;
       display: flex;
       min-height: 100vh;
-      background-color: #e0f7f7;
+      background-color: #f0fdfd;
     }
 
     .sidebar {
@@ -23,7 +23,7 @@
       left: 0;
       width: 240px;
       height: 100vh;
-      background-color: #a0d9d9;
+      background-color: #e0f7f7;
       padding: 20px;
       box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
       overflow-y: auto;
