--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           <img src="sti-cover.jpg" alt="Studies of Interpretation and Translation Cover" class="journal-cover" />
           <div>
             <p>
-              <a href="https://www.airitilibrary.com/Article/Detail?DocID=a0000024-201911-202007020020-202007020020-79-92" target="_blank">
+              <a href="https://www.airitilibrary.com/Article/Detail/a0000024-201911-202007020020-202007020020-79-92" target="_blank">
                 Professional Translator and Interpreter Training in France: Specificities and Challenges
               </a><br />
               Petit de Chemellier, J.-F. (2019). Professional Translator and Interpreter Training in France: Specificities and Challenges. <em>Studies of Interpretation and Translation</em>, Vol. 23, pp. 79–92.
