--- a/index.html
+++ b/index.html
@@ -174,6 +174,10 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar icon" style="width: 16px; height: 16px;" />
   Google Scholar
 </a>
+<a class="orcid-link" href="https://www.scholarmate.com/P/v1hhv7" target="_blank">
+  <img src="https://www.scholarmate.com/favicon.ico" alt="ScholarMate icon" style="width: 16px; height: 16px;" />
+  ScholarMate
+</a>
   </div>
 
   <div class="main-content">
