--- a/index.html
+++ b/index.html
@@ -201,7 +201,9 @@
                 ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing
               </a><br />
               Petit de Chemellier, J.-F., & Chan, S. (2025). ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing. <em>Bilingualism: Language and Cognition</em>, 1–13. doi:10.1017/S1366728925000227
-              <a href="https://doi.org/10.6084/m9.figshare.28014482" target="_blank">Data repository</a>
+             <a href="https://doi.org/10.6084/m9.figshare.28014482" target="_blank" style="display: inline-flex; align-items: center; gap: 6px; text-decoration: none;">
+             <img src="https://upload.wikimedia.org/wikipedia/commons/3/38/Figshare_logo.svg" alt="Figshare" style="height: 20px;" />
+             <span>Open data Open materials</span>
             </p>
           </div>
         </div>
