--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     }
 
     .main-content {
-      margin-left: 240px; /* fixed to match sidebar width */
+      margin-left: 240px;
       flex-grow: 1;
       padding: 20px;
     }
@@ -67,13 +67,11 @@
       margin-bottom: 10px;
     }
 
-    /* Links: inline by default */
     a {
       text-decoration: none;
       color: #007acc;
     }
 
-    /* Sidebar links stacked vertically */
     .sidebar a {
       display: block;
       margin-bottom: 8px;
@@ -162,22 +160,22 @@
     <h1>薛法藍</h1>
     <a href="https://maps.google.com/?q=Taipei, Taiwan" target="_blank">🏠 Taipei, Taiwan</a>
     <a href="mailto:xuefalan@gmail.com">📧 xuefalan@gmail.com</a>
-<a class="orcid-link" href="https://orcid.org/0009-0004-5699-9236" target="_blank">
-  <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID icon" />
-  ORCID Profile
-</a>
-  <a class="orcid-link" href="https://www.researchgate.net/profile/Jean-Francois-Petit-De-Chemellier" target="_blank">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" alt="ResearchGate icon" style="width: 16px; height: 16px;" />
-  ResearchGate
-</a>
-<a class="orcid-link" href="https://scholar.google.com/citations?user=evThVLsAAAAJ&hl=en" target="_blank">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar icon" style="width: 16px; height: 16px;" />
-  Google Scholar
-</a>
-<a class="orcid-link" href="https://www.scholarmate.com/P/v1hhv7" target="_blank">
-  <img src="https://www.scholarmate.com/favicon.ico" alt="ScholarMate icon" style="width: 16px; height: 16px;" />
-  ScholarMate
-</a>
+    <a class="orcid-link" href="https://orcid.org/0009-0004-5699-9236" target="_blank">
+      <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID icon" />
+      ORCID Profile
+    </a>
+    <a class="orcid-link" href="https://www.researchgate.net/profile/Jean-Francois-Petit-De-Chemellier" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" alt="ResearchGate icon" style="width: 16px; height: 16px;" />
+      ResearchGate
+    </a>
+    <a class="orcid-link" href="https://scholar.google.com/citations?user=evThVLsAAAAJ&hl=en" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar icon" style="width: 16px; height: 16px;" />
+      Google Scholar
+    </a>
+    <a class="orcid-link" href="https://www.scholarmate.com/P/v1hhv7" target="_blank">
+      <img src="https://www.scholarmate.com/favicon.ico" alt="ScholarMate icon" style="width: 16px; height: 16px;" />
+      ScholarMate
+    </a>
   </div>
 
   <div class="main-content">
@@ -201,9 +199,13 @@
                 ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing
               </a><br />
               Petit de Chemellier, J.-F., & Chan, S. (2025). ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing. <em>Bilingualism: Language and Cognition</em>, 1–13. doi:10.1017/S1366728925000227
-             <a href="https://doi.org/10.6084/m9.figshare.28014482" target="_blank" style="display: inline-flex; align-items: center; gap: 6px; text-decoration: none;">
-             <img src="https://upload.wikimedia.org/wikipedia/commons/3/38/Figshare_logo.svg" alt="Figshare" style="height: 20px;" />
-             <span>Open data Open materials</span>
+            </p>
+            <p style="margin-top: 8px;">
+              <a href="https://doi.org/10.6084/m9.figshare.28014482" target="_blank" style="display: inline-flex; align-items: center; gap: 8px; text-decoration: none;">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/3/38/Figshare_logo.svg" alt="Figshare" style="height: 20px;" />
+                <img src="https://osf.io/static/img/circle_badge.svg" alt="Open Materials" style="height: 20px;" />
+                <span>Open data Open materials</span>
+              </a>
             </p>
           </div>
         </div>
@@ -221,14 +223,14 @@
         </div>
       </div>
     </div>
-    
+
     <div class="column">
       <h3>Research Highlights</h3>
       <div class="publications">
         <div class="publication-item">
           <div>
             <p>
-              Below is a scalp map video showing the Atypical minus Typical translation equivalents difference in congruent trials (e.g., <em>kāi diànnăo</em> 開電腦 “turn on the computer” followed by <em>turn on</em> minus <em>kāi chuānghù</em> 開窗戶 “open the window” followed by <em>open</em>) averaged accross 24 Chinese-English bilingual participants and over 1200 milliseconds. Compared to Typical translation equivalents, we can see that Atypical translation equivalents elicit a posterior N400 (from 300 to 500 ms), indicating retrieval difficulty, followed by a frontal-Post N400 Positivity (f-PNP) (from 600 to 900 ms), reflecting the effort to inhibit typical translations and integrate atypical ones.
+              Below is a scalp map video showing the Atypical minus Typical translation equivalents difference in congruent trials (e.g., <em>kāi diànnăo</em> 開電腦 “turn on the computer” followed by <em>turn on</em> minus <em>kāi chuānghù</em> 開窗戶 “open the window” followed by <em>open</em>) averaged across 24 Chinese-English bilingual participants and over 1200 milliseconds. Compared to Typical translation equivalents, we can see that Atypical translation equivalents elicit a posterior N400 (from 300 to 500 ms), indicating retrieval difficulty, followed by a frontal-Post N400 Positivity (f-PNP) (from 600 to 900 ms), reflecting the effort to inhibit typical translations and integrate atypical ones.
             </p>
 
             <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; margin-top: 10px;">
