--- a/index.html
+++ b/index.html
@@ -165,17 +165,29 @@
       ORCID Profile
     </a>
     <a class="orcid-link" href="https://www.researchgate.net/profile/Jean-Francois-Petit-De-Chemellier" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" alt="ResearchGate icon" style="width: 16px; height: 16px;" />
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" alt="ResearchGate icon" />
       ResearchGate
     </a>
     <a class="orcid-link" href="https://scholar.google.com/citations?user=evThVLsAAAAJ&hl=en" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar icon" style="width: 16px; height: 16px;" />
+      <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar icon" />
       Google Scholar
     </a>
     <a class="orcid-link" href="https://www.scholarmate.com/P/v1hhv7" target="_blank">
-      <img src="https://www.scholarmate.com/favicon.ico" alt="ScholarMate icon" style="width: 16px; height: 16px;" />
+      <img src="https://www.scholarmate.com/favicon.ico" alt="ScholarMate icon" />
       ScholarMate
     </a>
+
+    <div style="margin-top: 20px;">
+      <a href="https://orcid.org/0009-0004-5699-9236" target="_blank">
+        <img src="https://img.shields.io/badge/ORCID-0009--0004--5699--9236-green?logo=orcid" alt="ORCID Badge" />
+      </a>
+      <a href="https://scholar.google.com/citations?user=evThVLsAAAAJ&hl=en" target="_blank">
+        <img src="https://img.shields.io/badge/Google%20Scholar-Profile-blue?logo=google-scholar" alt="Google Scholar Badge" />
+      </a>
+      <a href="https://www.researchgate.net/profile/Jean-Francois-Petit-De-Chemellier" target="_blank">
+        <img src="https://img.shields.io/badge/ResearchGate-Profile-brightgreen?logo=researchgate" alt="ResearchGate Badge" />
+      </a>
+    </div>
   </div>
 
   <div class="main-content">
@@ -199,12 +211,6 @@
                 ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing
               </a><br />
               Petit de Chemellier, J.-F., & Chan, S. (2025). ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing. <em>Bilingualism: Language and Cognition</em>, 1–13. doi:10.1017/S1366728925000227
-            </p>
-            <p style="margin-top: 8px;">
-                <a href="https://doi.org/10.6084/m9.figshare.28014482" target="_blank" style="display: inline-flex; align-items: center; gap: 6px; text-decoration: none;">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/3/38/Figshare_logo.svg" alt="Figshare" style="height: 20px;" />
-                <span>Open data Open materials</span>
-              </a>
             </p>
           </div>
         </div>
