--- a/index.html
+++ b/index.html
@@ -200,8 +200,9 @@
               </a><br />
               Petit de Chemellier, J.-F., & Chan, S. (2025). ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing. <em>Bilingualism: Language and Cognition</em>, 1–13. doi:10.1017/S1366728925000227
             </p>
-            <p style="margin-top: 8px;">
+              <p style="margin-top: 8px;">
               <a href="https://doi.org/10.6084/m9.figshare.28014482" target="_blank" style="display: inline-flex; align-items: center; gap: 8px; text-decoration: none;">
+              📁 Data repository
               </a>
             </p>
           </div>
