--- a/index.html
+++ b/index.html
@@ -236,7 +236,14 @@
                   style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
           </iframe>
         </div>
-
+        
+        <p style="margin-top: 12px;">
+          For more details, see the article: 
+          <a href="https://doi.org/10.1017/S1366728925000227" target="_blank">
+            ‘Don’t forget to close the light!’: ERP evidence for the facilitation of typical translation equivalents in bilingual processing
+          </a>
+        </p>
+        
         <p style="margin-top: 12px;">
           For more details, see the article: 
           <a href="https://doi.org/10.1017/S1366728925000227" target="_blank">
